--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,18 +12,8 @@ jobs:
   publish_release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: "NetherRealmSpigot/reusable-actions/mcping-golang/release@main"
         with:
-          fetch-depth: 0
-      - name: Setup go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "^1.24"
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v4
-        with:
-          version: latest
-          args: release --clean
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
+          tag-ref: ${{ github.ref }}
+          golang-version: "^1.24"
+          token: ${{ github.token }}
